firebase-debug.log
[debug] [2023-04-16T10:39:52.205Z] ----------------------------------------------------------------------
[debug] [2023-04-16T10:39:52.206Z] Command:       /usr/local/bin/node /usr/local/bin/firebase serve --only functions
[debug] [2023-04-16T10:39:52.208Z] CLI Version:   11.24.1
[debug] [2023-04-16T10:39:52.208Z] Platform:      darwin
[debug] [2023-04-16T10:39:52.208Z] Node Version:  v16.17.0
[debug] [2023-04-16T10:39:52.209Z] Time:          Sun Apr 16 2023 16:09:52 GMT+0530 (India Standard Time)
[debug] [2023-04-16T10:39:52.210Z] ----------------------------------------------------------------------
[debug] 
[debug] [2023-04-16T10:39:52.274Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2023-04-16T10:39:52.274Z] > authorizing via signed-in user (jessjoemanoj@gmail.com)
[debug] [2023-04-16T10:39:52.274Z] [iam] checking project book2man-5b19b for permissions ["firebase.projects.get"]
[debug] [2023-04-16T10:39:52.275Z] >>> [apiv2][query] POST https://cloudresourcemanager.googleapis.com/v1/projects/book2man-5b19b:testIamPermissions [none]
[debug] [2023-04-16T10:39:52.275Z] >>> [apiv2][(partial)header] POST https://cloudresourcemanager.googleapis.com/v1/projects/book2man-5b19b:testIamPermissions x-goog-quota-user=projects/book2man-5b19b
[debug] [2023-04-16T10:39:52.275Z] >>> [apiv2][body] POST https://cloudresourcemanager.googleapis.com/v1/projects/book2man-5b19b:testIamPermissions {"permissions":["firebase.projects.get"]}
[debug] [2023-04-16T10:39:55.332Z] <<< [apiv2][status] POST https://cloudresourcemanager.googleapis.com/v1/projects/book2man-5b19b:testIamPermissions 200
[debug] [2023-04-16T10:39:55.333Z] <<< [apiv2][body] POST https://cloudresourcemanager.googleapis.com/v1/projects/book2man-5b19b:testIamPermissions {"permissions":["firebase.projects.get"]}
[debug] [2023-04-16T10:39:55.335Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b [none]
[debug] [2023-04-16T10:39:56.557Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b 200
[debug] [2023-04-16T10:39:56.558Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b {"projectId":"book2man-5b19b","projectNumber":"841720546414","displayName":"Book2man-dev","name":"projects/book2man-5b19b","resources":{"hostingSite":"book2man-5b19b","realtimeDatabaseInstance":"book2man-5b19b-default-rtdb","storageBucket":"book2man-5b19b.appspot.com","locationId":"us-central"},"state":"ACTIVE","etag":"1_878e7388-b72f-4bc9-b039-40898d2fec3b"}
[debug] [2023-04-16T10:39:56.565Z] defaultcredentials: writing to file /Users/User/.config/firebase/jessjoemanoj_gmail_com_application_default_credentials.json
[debug] [2023-04-16T10:39:56.567Z] Setting GAC to /Users/User/.config/firebase/jessjoemanoj_gmail_com_application_default_credentials.json {"metadata":{"emulator":{"name":"functions"},"message":"Setting GAC to /Users/User/.config/firebase/jessjoemanoj_gmail_com_application_default_credentials.json"}}
[debug] [2023-04-16T10:39:56.567Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b/adminSdkConfig [none]
[debug] [2023-04-16T10:39:57.471Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b/adminSdkConfig 200
[debug] [2023-04-16T10:39:57.472Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/book2man-5b19b/adminSdkConfig {"projectId":"book2man-5b19b","databaseURL":"https://book2man-5b19b-default-rtdb.firebaseio.com","storageBucket":"book2man-5b19b.appspot.com","locationId":"us-central"}
[info] i  functions: Watching "/Users/User/Documents/Projects/Book2Man/functions" for Cloud Functions... {"metadata":{"emulator":{"name":"functions"},"message":"Watching \"/Users/User/Documents/Projects/Book2Man/functions\" for Cloud Functions..."}}
[debug] [2023-04-16T10:39:57.495Z] Validating nodejs source
[warn] ⚠  functions: package.json indicates an outdated version of firebase-functions. Please upgrade using npm install --save firebase-functions@latest in your functions directory. 
[debug] [2023-04-16T10:39:58.682Z] > [functions] package.json contents: {
  "name": "functions",
  "description": "Cloud Functions for Firebase",
  "scripts": {
    "lint": "eslint .",
    "serve": "firebase emulators:start --only functions",
    "shell": "firebase functions:shell",
    "start": "npm run shell",
    "deploy": "firebase deploy --only functions",
    "logs": "firebase functions:log"
  },
  "engines": {
    "node": "16"
  },
  "main": "index.js",
  "dependencies": {
    "firebase-admin": "^11.5.0",
    "firebase-functions": "^4.2.0"
  },
  "devDependencies": {
    "eslint": "^8.15.0",
    "eslint-config-google": "^0.14.0",
    "firebase-functions-test": "^3.0.0"
  },
  "private": true
}
[debug] [2023-04-16T10:39:58.682Z] Building nodejs source
[debug] [2023-04-16T10:39:58.682Z] Failed to find version of module node: reached end of search path /Users/User/Documents/Projects/Book2Man/functions/node_modules
[info] ✔  functions: Using node@16 from host. 
[debug] [2023-04-16T10:39:58.684Z] Could not find functions.yaml. Must use http discovery
[debug] [2023-04-16T10:39:58.690Z] Found firebase-functions binary at '/Users/User/Documents/Projects/Book2Man/node_modules/.bin/firebase-functions'
[debug] [2023-04-16T10:39:59.276Z] Serving at port 8836

[debug] [2023-04-16T10:39:59.499Z] Got response from /__/functions.yaml {"endpoints":{},"specVersion":"v1alpha1","requiredAPIs":[]}
[debug] [2023-04-16T10:39:59.504Z] shutdown requested via /__/quitquitquit

[info] ✔  functions: Loaded functions definitions from source: . {"metadata":{"emulator":{"name":"functions"},"message":"Loaded functions definitions from source: ."}}
[info] i  functions: Watching "/Users/User/Documents/Projects/Book2Man/bookfunctions" for Cloud Functions... {"metadata":{"emulator":{"name":"functions"},"message":"Watching \"/Users/User/Documents/Projects/Book2Man/bookfunctions\" for Cloud Functions..."}}
[debug] [2023-04-16T10:39:59.510Z] Validating nodejs source
[warn] ⚠  functions: package.json indicates an outdated version of firebase-functions. Please upgrade using npm install --save firebase-functions@latest in your functions directory. 
[debug] [2023-04-16T10:40:00.291Z] > [functions] package.json contents: {
  "name": "functions",
  "description": "Cloud Functions for Firebase",
  "scripts": {
    "lint": "eslint .",
    "serve": "firebase emulators:start --only functions",
    "shell": "firebase functions:shell",
    "start": "npm run shell",
    "deploy": "firebase deploy --only functions",
    "logs": "firebase functions:log"
  },
  "engines": {
    "node": "16"
  },
  "main": "index.js",
  "dependencies": {
    "firebase-admin": "^11.5.0",
    "firebase-functions": "^4.2.0"
  },
  "devDependencies": {
    "eslint": "^8.15.0",
    "eslint-config-google": "^0.14.0",
    "firebase-functions-test": "^3.0.0"
  },
  "private": true
}
[debug] [2023-04-16T10:40:00.291Z] Building nodejs source
[debug] [2023-04-16T10:40:00.291Z] Failed to find version of module node: reached end of search path /Users/User/Documents/Projects/Book2Man/bookfunctions/node_modules
[info] ✔  functions: Using node@16 from host. 
[debug] [2023-04-16T10:40:00.292Z] Could not find functions.yaml. Must use http discovery
[debug] [2023-04-16T10:40:00.293Z] Found firebase-functions binary at '/Users/User/Documents/Projects/Book2Man/node_modules/.bin/firebase-functions'
[debug] [2023-04-16T10:40:00.404Z] Serving at port 8365

[debug] [2023-04-16T10:40:00.412Z] Got response from /__/functions.yaml Failed to generate manifest from function source: SyntaxError: Identifier 'functions' has already been declared
[debug] [2023-04-16T10:40:00.413Z] Failed to parse functions.yamlincomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:
     ... rom function source: SyntaxError: Identifier 'functions' has alr ... 
                                         ^ {"name":"YAMLException","reason":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line","mark":{"name":null,"buffer":"Failed to generate manifest from function source: SyntaxError: Identifier 'functions' has already been declared\n\u0000","position":61,"line":0,"column":61},"message":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:\n     ... rom function source: SyntaxError: Identifier 'functions' has alr ... \n                                         ^"}
[debug] [2023-04-16T10:40:00.415Z] shutdown requested via /__/quitquitquit

[error] ⬢  functions: Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Identifier 'functions' has already been declared {"metadata":{"emulator":{"name":"functions"},"message":"Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Identifier 'functions' has already been declared"}}
